fix loader causing overflow

--- a/src/features/ProjectsWindow/ProjectsWindow.module.scss
+++ b/src/features/ProjectsWindow/ProjectsWindow.module.scss
@@ -1,4 +1,4 @@
 .tabBody {
 	min-width: 300px;
-	min-height: 200px;
+	min-height: 350px;
 }
