--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,6 +15,7 @@
 
 body {
 	margin: 0 !important;
+	overflow-x: clip;
 	color: currentColor;
 	font-weight: 400;
 	font-family: "pixeloid_sans", sans-serif !important;
